# Tensor-Apex

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  TECHNICAL_SUBMISSION.md  gradio_app.py  inference.py  openenv.yaml  pyproject.toml
business_policy_env/: baseline.py  data_generation.py  db.py  environment.py  landing.py  models.py  policies.py  reasoning_utils.py  rewards.py  server.py  tasks.py
scripts/: docker_smoke.sh  self_check.sh  validate_openenv_contract.py
server/: __init__.py  app.py
tests/: test_environment.py
